refactor: 코드 품질 및 보안 개선
- PostController: memberId를 request body 대신 Authentication에서 추출 (보안)
- PostController: createPost, updatePost에 @Valid 추가
- PostCreateRequest: memberId 필드 제거, @NotBlank/@NotNull/@Min 유효성 검사 추가
- PostCreateService: memberId를 파라미터로 분리
- PostUpdateRequest: 불필요한 @AllArgsConstructor/@Builder 제거
- GlobalExceptionHandler: Map 대신 ErrorResponse 타입으로 응답 형식 통일
- MemberProfileService.getProfile: @Transactional(readOnly = true) 누락 추가
- PostReadService: Collectors.toList() → .toList() 통일
- AuthController: "refreshToken" 매직 스트링 상수화

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>