@@ -10,7 +10,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -23,7 +22,7 @@ public class PostReadService {
         return postRepository.findByDeletedFalseOrderByCreatedAtDesc()
                 .stream()
                 .map(PostResponse::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public PostResponse getPostById(Long id) {
